<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_now_playing"
        android:icon="@drawable/ic_menu_now_playing"
        android:title="@string/now_playing" />
    <item
        android:id="@+id/nav_upcoming"
        android:icon="@drawable/ic_menu_upcoming"
        android:title="@string/upcoming" />
    <item
        android:id="@+id/nav_favorite"
        android:icon="@drawable/ic_menu_favorite"
        android:title="@string/favorite" />


    <item android:title="Preferences">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:title="@string/action_settings"/>
        </menu>
    </item>

</menu>
